# magg

./: .gitignore  README.md  config.json  config.json.template  pyproject.toml  requirements.in  requirements.txt  response_example.json  run.sh  setup.py
deploy/: build.sh  config.json.template  deploy.sh  main.tf  setup.sh
src/: api.py  forecast.db  formatting.py  magg.py  mailing.py  models.py
src/client/: exceptions.py  metaculus.py  mixins.py
