[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "magg"
description = "Metaculus aggregator."
version = "0.1.0"
authors = [
    {name = "Patrick Catach"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "boto3",
]

[project.scripts]
magg = "magg:cli"
